[gd_scene load_steps=4 format=3 uid="uid://bx6qi23y6hcqh"]

[ext_resource type="Script" path="res://inventory/inv_ui.gd" id="1_r200f"]
[ext_resource type="Texture2D" uid="uid://bg81oe1dyxx8a" path="res://assets/ui/inventory-background.png" id="2_0cb14"]
[ext_resource type="PackedScene" uid="uid://djjnc1a7nclwd" path="res://inventory/inv_ui_slot.tscn" id="3_l15q5"]

[node name="Inv_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1108.0
offset_bottom = -606.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r200f")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 44.0
offset_bottom = 42.0
texture = ExtResource("2_0cb14")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="inv_UI_slot1" parent="NinePatchRect/GridContainer" instance=ExtResource("3_l15q5")]
layout_mode = 2

[node name="inv_UI_slot2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_l15q5")]
layout_mode = 2

[node name="inv_UI_slot3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_l15q5")]
layout_mode = 2

[node name="inv_UI_slot4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_l15q5")]
layout_mode = 2
